--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Animated Card</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <article class="container">
+      <section class="main">
+        <p class="description">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident
+          possimus earum asperiores quos distinctio sapiente laborum eveniet
+          ducimus modi accusamus?
+        </p>
+      </section>
+      <footer class="footer">
+        <img
+          src="https://randomuser.me/api/portraits/women/0.jpg"
+          alt="User Profile Picture"
+        />
+        <p class="userName">Jenny Smith</p>
+      </footer>
+    </article>
+  </body>
 </html>
